--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sd-0x-project-delivery-app",
+  "name": "beer-delivery",
   "version": "1.0.0",
   "description": "\"Você já usa o GitHub diariamente para desenvolver os exercícios, certo? Agora, para desenvolver os projetos, você deverá seguir as instruções a seguir. Fique atento a cada passo, e se tiver qualquer dúvida, nos envie por _Slack_! #vqv 🚀\"",
   "engines": {
@@ -24,7 +24,7 @@
     "type": "git",
     "url": "git+https://github.com/betrybe/sd-0x-project-delivery-app.git"
   },
-  "author": "",
+  "author": "asafworld & group",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/betrybe/sd-0x-project-delivery-app/issues"
